[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/Roboto-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://src/QuitConfirmation.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/SettingsMenu.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 44
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 44
font_data = ExtResource( 2 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelAndButtons" type="VBoxContainer" parent="Menu"]
margin_left = 799.0
margin_top = 390.0
margin_right = 1120.0
margin_bottom = 690.0

[node name="TitleLabel" type="Label" parent="Menu/LabelAndButtons"]
margin_right = 321.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 1 )
text = "To the Beat"
align = 1
valign = 1

[node name="StartGameButton" type="Button" parent="Menu/LabelAndButtons"]
margin_top = 56.0
margin_right = 321.0
margin_bottom = 114.0
focus_neighbour_top = NodePath("../QuitToDesktopButton")
focus_neighbour_bottom = NodePath("../VersusButton")
custom_fonts/font = SubResource( 2 )
text = "Start Game"

[node name="VersusButton" type="Button" parent="Menu/LabelAndButtons"]
margin_top = 118.0
margin_right = 321.0
margin_bottom = 176.0
focus_neighbour_top = NodePath("../StartGameButton")
focus_neighbour_bottom = NodePath("../SettingsButton")
custom_fonts/font = SubResource( 2 )
text = "Versus"

[node name="SettingsButton" type="Button" parent="Menu/LabelAndButtons"]
margin_top = 180.0
margin_right = 321.0
margin_bottom = 238.0
focus_neighbour_top = NodePath("../VersusButton")
focus_neighbour_bottom = NodePath("../QuitToDesktopButton")
custom_fonts/font = SubResource( 2 )
text = "Settings"

[node name="QuitToDesktopButton" type="Button" parent="Menu/LabelAndButtons"]
margin_top = 242.0
margin_right = 321.0
margin_bottom = 300.0
focus_neighbour_top = NodePath("../SettingsButton")
focus_neighbour_bottom = NodePath("../StartGameButton")
custom_fonts/font = SubResource( 2 )
text = "Quit to Desktop"

[node name="QuitConfirmation" parent="Menu" instance=ExtResource( 3 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 560.0
margin_top = 483.0
margin_right = 1360.0
margin_bottom = 597.0

[node name="SettingsMenu" parent="." instance=ExtResource( 4 )]
visible = false
previous_menu = NodePath("../Menu")
previous_focus = NodePath("../Menu/LabelAndButtons/SettingsButton")
[connection signal="pressed" from="Menu/LabelAndButtons/StartGameButton" to="." method="_on_StartGameButton_pressed"]
[connection signal="pressed" from="Menu/LabelAndButtons/VersusButton" to="." method="_on_VersusButton_pressed"]
[connection signal="pressed" from="Menu/LabelAndButtons/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="Menu/LabelAndButtons/QuitToDesktopButton" to="." method="_on_QuitToDesktopButton_pressed"]
[connection signal="did_not_quit" from="Menu/QuitConfirmation" to="." method="_on_QuitConfirmation_did_not_quit"]
